--- a/about.html
+++ b/about.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-    
-<body>
-    
+    <body>
+    #section1
+        #section2
+        #section3
+        #section4
 </body>
 </html>
