--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <h1>my contact is shashankcheera@gmail.com</h1>
+    <h1>email me on shashankcheera@gmail.com</h1>
 </head>
 <body> 
 </body>
