--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
     <section class="home">
         <div class="home-content">
             <h1>Hi, I,M ch.shashank</h1>
-            <h3>Full-stack web devloper</h3>
+            <h3>data analytst , sde, Full-stack web devloper</h3>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea nobis, repellendus at eum ipsum ducimus. Quia modi magnam numquam, necessitatibus quam adipisci animi molestiae deleniti eaque eos, blanditiis qui vero?</p>
         <div class="btn-box">
             <a href="#">Hire me.</a>
